Modifiche al Router per poter reindirizzare i messaggi solo alle prime n code

--- a/progettoss/omnetpp.ini
+++ b/progettoss/omnetpp.ini
@@ -10,8 +10,8 @@ Network.source.interArrivalTime = exponential(1s)
 #[Deadline dei job creati]
 
 # Code K = {1, 2, 4}
-#Network.router.routingAlgorithm = "pssRandom"
-#Network.router.queueNumber = 4
+Network.router.routingAlgorithm = "pssRandom"
+Network.router.queueNumber = 4
 
 # Esponenziale negativa di media 1/mu = {0,333333333333, 0.25}; mu = {3.0, 4.0}
 Network.server.serviceTime = exponential(0.25s)
