I Job vengono hanno una deadline assoluta che viene impostata dalla Source aggiungendo al tempo di simulazione attuale la deadline relativa impostata dall'utente. Di defaulta la deadline relativa è 0s e va ignorata.

--- a/progettoss/omnetpp.ini
+++ b/progettoss/omnetpp.ini
@@ -7,7 +7,7 @@ sim-time-limit = 100s
 # Esponenziale di media 1/lambda = {0.5, 0,714285714286, 0,833333333333, 1}; lambda = {2.0, 1.4, 1.2, 1.0}
 Network.source.interArrivalTime = exponential(1s)
 # Uniforme su [a, b] = {[4.0, 6.0], [3.0, 7.0]}
-#[Deadline dei job creati]
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
 
 # Code K = {1, 2, 4}
 Network.router.routingAlgorithm = "pssRandom"
