--- a/progettoss/.qtenvrc
+++ b/progettoss/.qtenvrc
@@ -8,4 +8,4 @@ run-max-animation-speed=nan
 run-max-playback-speed=100
 run-min-animation-speed=nan
 run-min-playback-speed=0.01
-run-playback-speed=10
+run-playback-speed=11.220184543019636
