Il server controlla la deadline dei job e li droppa salvando il dato

--- a/progettoss/omnetpp.ini
+++ b/progettoss/omnetpp.ini
@@ -5,8 +5,7 @@ record-eventlog = true
 sim-time-limit = 100s
 
 # Esponenziale di media 1/lambda = {0.5, 0,714285714286, 0,833333333333, 1}; lambda = {2.0, 1.4, 1.2, 1.0}
-#Network.source.interArrivalTime = exponential(1s)
-Network.source.interArrivalTime = 1s
+Network.source.interArrivalTime = exponential(1s)
 # Uniforme su [a, b] = {[4.0, 6.0], [3.0, 7.0]}
 Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
 
@@ -15,6 +14,6 @@ Network.router.queueNumber = 4
 Network.router.routingAlgorithm = "pssRandom"
 
 # Esponenziale negativa di media 1/mu = {0,333333333333, 0.25}; mu = {3.0, 4.0}
-#Network.server.serviceTime = exponential(0.25s)
-Network.server.serviceTime = 2s
+Network.server.serviceTime = exponential(0.25s)
 Network.server.fetchingAlgorithm = "exhaustiveService"
+Network.server.checkJobDeadline = true
