Alcune modifiche in seguito a delle simulazioni

--- a/progettoss/omnetpp.ini
+++ b/progettoss/omnetpp.ini
@@ -1,19 +1,23 @@
 [General]
 network = Network
 
+experiment-label = ${configname}
 record-eventlog = true
+repeat = 20
+seed-set = 33
 sim-time-limit = 100s
 
-# Esponenziale di media 1/lambda = {0.5, 0,714285714286, 0,833333333333, 1}; lambda = {2.0, 1.4, 1.2, 1.0}
-Network.source.interArrivalTime = exponential(1s)
+# Esponenziale di media 1/lambda = {0.5, 0.714285714286, 0.833333333333, 1}; lambda = {2.0, 1.4, 1.2, 1.0}
+simtime-resolution = ps
+Network.source.interArrivalTime = exponential(0.5s)
 # Uniforme su [a, b] = {[4.0, 6.0], [3.0, 7.0]}
-Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
 
 # Code K = {1, 2, 4}
-Network.router.queueNumber = 4
+Network.router.queueNumber = 1
 Network.router.routingAlgorithm = "pssRandom"
 
-# Esponenziale negativa di media 1/mu = {0,333333333333, 0.25}; mu = {3.0, 4.0}
-Network.server.serviceTime = exponential(0.25s)
+# Esponenziale negativa di media 1/mu = {0.333333333333, 0.25}; mu = {3.0, 4.0}
+Network.server.serviceTime = exponential(0.333333333333s)
 Network.server.fetchingAlgorithm = "exhaustiveService"
 Network.server.checkJobDeadline = true
