--- a/progettoss/.qtenvrc
+++ b/progettoss/.qtenvrc
@@ -1,3 +1,7 @@
+[General]
+last-configname=General
+last-runnumber=2
+
 [RunModeProfiles]
 fast-max-animation-speed=nan
 fast-max-playback-speed=1e+06
@@ -8,4 +12,4 @@ run-max-animation-speed=nan
 run-max-playback-speed=100
 run-min-animation-speed=nan
 run-min-playback-speed=0.01
-run-playback-speed=11.220184543019636
+run-playback-speed=100
