Create le configurazioni per effettuare le simulazioni

--- a/progettoss/omnetpp.ini
+++ b/progettoss/omnetpp.ini
@@ -3,20 +3,550 @@ network = Network
 
 record-eventlog = true
 repeat = 20
-seed-set = 33
-sim-time-limit = 100s
+sim-time-limit = 1000s
 
-# Esponenziale di media 1/lambda = {0.5, 0.714285714286, 0.833333333333, 1}; lambda = {2.0, 1.4, 1.2, 1.0}
-simtime-resolution = ps
-Network.source.interArrivalTime = exponential(0.5s)
-# Uniforme su [a, b] = {[4.0, 6.0], [3.0, 7.0]}
-Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
-
-# Code K = {1, 2, 4}
-Network.router.queueNumber = 1
 Network.router.routingAlgorithm = "pssRandom"
-
-# Esponenziale negativa di media 1/mu = {0.333333333333, 0.25}; mu = {3.0, 4.0}
-Network.server.serviceTime = exponential(0.333333333333s)
 Network.server.fetchingAlgorithm = "exhaustiveService"
 Network.server.checkJobDeadline = true
+
+# [Example]
+# Esponenziale di media 1/lambda = {0.5, 0.714285714286, 0.833333333333, 1}; lambda = {2.0, 1.4, 1.2, 1.0}
+# Network.source.interArrivalTime = exponential(<1/lambda>s)
+
+# H Uniforme su [a, b] = {[4.0, 6.0], [3.0, 7.0]}
+# Network.source.jobRelativeDeadline = uniform(<a>s, <b>s)
+
+# Code K = {1, 2, 4}
+# Network.router.queueNumber = <K>
+
+# S Esponenziale negativa di media 1/mu = {0.333333333333, 0.25}; mu = {3.0, 4.0}
+# Network.server.serviceTime = exponential(<1/mu>s)
+
+[Config n1lambda1H1K1mu1]
+seed-set = 33
+
+Network.source.interArrivalTime = exponential(0.5s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 1
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n2lambda1H1K1mu2]
+seed-set = 34
+
+Network.source.interArrivalTime = exponential(0.5s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 1
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n3lambda1H1K2mu1]
+seed-set = 35
+
+Network.source.interArrivalTime = exponential(0.5s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 2
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n4lambda1H1K2mu2]
+seed-set = 36
+
+Network.source.interArrivalTime = exponential(0.5s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 2
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n5lambda1H1K3mu1]
+seed-set = 37
+
+Network.source.interArrivalTime = exponential(0.5s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 4
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n6lambda1H1K3mu2]
+seed-set = 38
+
+Network.source.interArrivalTime = exponential(0.5s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 4
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n7lambda1H2K1mu1]
+seed-set = 39
+
+Network.source.interArrivalTime = exponential(0.5s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 1
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n8lambda1H2K1mu2]
+seed-set = 40
+
+Network.source.interArrivalTime = exponential(0.5s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 1
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n9lambda1H2K2mu1]
+seed-set = 41
+
+Network.source.interArrivalTime = exponential(0.5s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 2
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n10lambda1H2K2mu2]
+seed-set = 42
+
+Network.source.interArrivalTime = exponential(0.5s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 2
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n11lambda1H2K3mu1]
+seed-set = 43
+
+Network.source.interArrivalTime = exponential(0.5s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 4
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n12lambda1H2K3mu2]
+seed-set = 44
+
+Network.source.interArrivalTime = exponential(0.5s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 4
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n13lambda2H1K1mu1]
+seed-set = 45
+
+Network.source.interArrivalTime = exponential(0.714285714286s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 1
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n14lambda2H1K1mu2]
+seed-set = 46
+
+Network.source.interArrivalTime = exponential(0.714285714286s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 1
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n15lambda2H1K2mu1]
+seed-set = 47
+
+Network.source.interArrivalTime = exponential(0.714285714286s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 2
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n16lambda2H1K2mu2]
+seed-set = 48
+
+Network.source.interArrivalTime = exponential(0.714285714286s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 2
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n17lambda2H1K3mu1]
+seed-set = 49
+
+Network.source.interArrivalTime = exponential(0.714285714286s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 4
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n18lambda2H1K3mu2]
+seed-set = 50
+
+Network.source.interArrivalTime = exponential(0.714285714286s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 4
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n19lambda2H2K1mu1]
+seed-set = 51
+
+Network.source.interArrivalTime = exponential(0.714285714286s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 1
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n20lambda2H2K1mu2]
+seed-set = 52
+
+Network.source.interArrivalTime = exponential(0.714285714286s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 1
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n21lambda2H2K2mu1]
+seed-set = 53
+
+Network.source.interArrivalTime = exponential(0.714285714286s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 2
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n22lambda2H2K2mu2]
+seed-set = 54
+
+Network.source.interArrivalTime = exponential(0.714285714286s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 2
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n23lambda2H2K3mu1]
+seed-set = 55
+
+Network.source.interArrivalTime = exponential(0.714285714286s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 4
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n24lambda2H2K3mu2]
+seed-set = 56
+
+Network.source.interArrivalTime = exponential(0.714285714286s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 4
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n25lambda3H1K1mu1]
+seed-set = 57
+
+Network.source.interArrivalTime = exponential(0.833333333333s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 1
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n26lambda3H1K1mu2]
+seed-set = 58
+
+Network.source.interArrivalTime = exponential(0.833333333333s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 1
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n27lambda3H1K2mu1]
+seed-set = 59
+
+Network.source.interArrivalTime = exponential(0.833333333333s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 2
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n28lambda3H1K2mu2]
+seed-set = 60
+
+Network.source.interArrivalTime = exponential(0.833333333333s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 2
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n29lambda3H1K3mu1]
+seed-set = 61
+
+Network.source.interArrivalTime = exponential(0.833333333333s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 4
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n30lambda3H1K3mu2]
+seed-set = 62
+
+Network.source.interArrivalTime = exponential(0.833333333333s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 4
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n31lambda3H2K1mu1]
+seed-set = 63
+
+Network.source.interArrivalTime = exponential(0.833333333333s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 1
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n32lambda3H2K1mu2]
+seed-set = 64
+
+Network.source.interArrivalTime = exponential(0.833333333333s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 1
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n33lambda3H2K2mu1]
+seed-set = 65
+
+Network.source.interArrivalTime = exponential(0.833333333333s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 2
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n34lambda3H2K2mu2]
+seed-set = 66
+
+Network.source.interArrivalTime = exponential(0.833333333333s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 2
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n35lambda3H2K3mu1]
+seed-set = 67
+
+Network.source.interArrivalTime = exponential(0.833333333333s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 4
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n36lambda3H2K3mu2]
+seed-set = 68
+
+Network.source.interArrivalTime = exponential(0.833333333333s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 4
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n37lambda4H1K1mu1]
+seed-set = 69
+
+Network.source.interArrivalTime = exponential(1s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 1
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n38lambda4H1K1mu2]
+seed-set = 70
+
+Network.source.interArrivalTime = exponential(1s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 1
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n39lambda4H1K2mu1]
+seed-set = 71
+
+Network.source.interArrivalTime = exponential(1s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 2
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n40lambda4H1K2mu2]
+seed-set = 72
+
+Network.source.interArrivalTime = exponential(1s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 2
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n41lambda4H1K3mu1]
+seed-set = 73
+
+Network.source.interArrivalTime = exponential(1s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 4
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n42lambda4H1K3mu2]
+seed-set = 74
+
+Network.source.interArrivalTime = exponential(1s)
+
+Network.source.jobRelativeDeadline = uniform(4.0s, 6.0s)
+
+Network.router.queueNumber = 4
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n43lambda4H2K1mu1]
+seed-set = 75
+
+Network.source.interArrivalTime = exponential(1s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 1
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n44lambda4H2K1mu2]
+seed-set = 76
+
+Network.source.interArrivalTime = exponential(1s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 1
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n45lambda4H2K2mu1]
+seed-set = 77
+
+Network.source.interArrivalTime = exponential(1s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 2
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n46lambda4H2K2mu2]
+seed-set = 78
+
+Network.source.interArrivalTime = exponential(1s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 2
+
+Network.server.serviceTime = exponential(0.25s)
+
+[Config n47lambda4H2K3mu1]
+seed-set = 79
+
+Network.source.interArrivalTime = exponential(1s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 4
+
+Network.server.serviceTime = exponential(0.333333333333s)
+
+[Config n48lambda4H2K3mu2]
+seed-set = 80
+
+Network.source.interArrivalTime = exponential(1s)
+
+Network.source.jobRelativeDeadline = uniform(3.0s, 7.0s)
+
+Network.router.queueNumber = 4
+
+Network.server.serviceTime = exponential(0.25s)
+
