--- a/progettoss/.qtenvrc
+++ b/progettoss/.qtenvrc
@@ -1,6 +1,6 @@
 [General]
-last-configname=General
-last-runnumber=2
+last-configname=n1lambda1H1K1mu1
+last-runnumber=0
 
 [RunModeProfiles]
 fast-max-animation-speed=nan
